[1.1.1] Fix image sizes and alignment

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1765,10 +1765,11 @@ h1:hover a, h2:hover a, h3:hover a, h4:hover a, h5:hover a, h6:hover a {
 .kg-image-card {
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 .kg-width-wide {
     position: relative;
-    width: 60vw;
+    width: 100%;
     margin: auto calc(50% - 50vw);
     transform: translateX(calc(50vw - 50%));
 }
@@ -1779,4 +1780,10 @@ h1:hover a, h2:hover a, h3:hover a, h4:hover a, h5:hover a, h6:hover a {
     right: 50%;
     margin-left: -50vw;
     margin-right: -50vw;
+}
+
+@media screen and (min-width: 60rem) {
+    .kg-width-wide {
+        width: 70vw;
+    }
 }
